[gd_scene load_steps=3 format=3 uid="uid://hh7g7q4fpetx"]

[ext_resource type="Script" path="res://scenes/ui/debug/map_generation.gd" id="1_pqd55"]
[ext_resource type="TileSet" uid="uid://b4m1ra0jhh7yx" path="res://resources/tileset.tres" id="2_23yfr"]

[node name="MapGeneration" type="CanvasLayer"]
script = ExtResource("1_pqd55")

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource("2_23yfr")
format = 2

[node name="PanelContainer" type="PanelContainer" parent="."]
offset_right = 8.0
offset_bottom = 23.0

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 3
theme_override_constants/margin_top = 3
theme_override_constants/margin_right = 3
theme_override_constants/margin_bottom = 3

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 6
text = "Walkers"
horizontal_alignment = 1

[node name="GridContainer" type="GridContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
columns = 2

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 6
text = "Count"
horizontal_alignment = 2

[node name="CountSpinBox" type="SpinBox" parent="PanelContainer/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
alignment = 1

[node name="Label2" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 6
text = "Loops"
horizontal_alignment = 2

[node name="LoopsSpinBox" type="SpinBox" parent="PanelContainer/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
alignment = 1

[node name="Label3" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 6
text = "Birth Chance"
horizontal_alignment = 2

[node name="BirthSpinBox" type="SpinBox" parent="PanelContainer/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
alignment = 1

[node name="Label4" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 6
text = "Death Chance"
horizontal_alignment = 2

[node name="DeathSpinBox" type="SpinBox" parent="PanelContainer/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="SubmitButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Submit"

[node name="ClearButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Clear"
